<resources>
    <string name="app_name">APP4-PokeTri</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main_write_your_name">Write your name</string>
    <string name="fragment_min_name">Name</string>
    <string name="fragment_main_what_is_your_name_coach">What is your name, coach?</string>
    <string name="fragment_main_game">Game</string>
    <string name="fragment_main_score">Score</string>
    <string name="fragment_game_quest">Quest</string>
    <string name="fragment_game_next">Next</string>
    <string name="fragment_game_answer_1">Answer 1</string>
    <string name="fragment_game_answer_2">Answer 2</string>
    <string name="fragment_game_answer_4">Answer 4</string>
    <string name="fragment_game_answer_3">Answer 3</string>
    <string name="fragment_details_time">Time:</string>
    <string name="fragment_details_score">Score:</string>
    <string name="fragment_details_name">Name:</string>
    <string name="main_activity_tabTitle">Tab %1$d</string>
</resources>
